 # Fixed issue [#21979] Make com_users and mod_login (almost) valid XHTML strict (site) (Rouven Weßling).
 # Fixed issue [#24087] Fix more PHP strict warnings (Rouven Weßling, Nikolai Plath).
 # Fixed issue [#24209] Data from feeds is not filtered (Ian MacLennan).
 # Fixed issue [#24197] Unfiltered output in the media manager - view = images (Ian MacLennan).

08-Jan-2011 Jean-Marie Simonet
 $ [#24181] Strings mixed up for com_users. Thanks Rouven.
 $ Correcting some installation langs

07-Jan-2011 Mark Dexter
# [#24106] onContentBeforeSave() and onContentAfterSave() do not work in the backend.
# [#24174] XSS Vulnerability in helpsearch

07-Jan-2011 Christophe Demko
 # [#24157] Library RSS deals with multiple categories for items but not for the feed itself
 # [#24188] Lack of Atom feed format returned (bill richardson)
 # [#24189] Duplicate word en-GB.mod_menu.ini (bill richardson)

07-Jan-2011 Andrew Eddie
 # Fixed issue [#24160] Backend com_languages XXS (Ervis Tusha, Rouven Weßling).
 # Fixed issue [#24176] XSS Vulnerability in com_content (Ian MacLennan).
 # Fixed issue [#23675] [patch] Weblinks controller uses getWord() instead of getCmd() (Soren Jensen, Andy Capiau).
 # Fixed issue [#23766] [patch] Consistent properties for JTable descendants (Joseph LeBlanc).
 # Fixed issue [#23164] Improving of loading modules (Dennis Hermatski).
 # Fixed issue [#24051] Some JHTML Behavior Housekeeping (Rouven Weßling).
 # Fixed issue [#24173] CSS/Layout changes to accomdate longer languages in installation (Andrea Tarr).
 # Fixed issue [#24136] Add a field for phone numbers to JForm (Rouven Weßling).
 # Fixed issue [#24180] Fix a number of script injection issues (Rouven Weßling).

07-Jan-2011 Jean-Marie Simonet
 $ Reordering strings for plg_content_joomla.ini, updating the xx-XX version.
 $ Correcting some strings in installation languages
 # Fix Typo in [23818]
 $ Adding sk-SK, be-BY, lv-LV, et-EE, ro-RO, nl-BE, lt-LT, aa-AA, no-NO in installation